Updating local files

--- a/public/gcintranet/ajax/sitemenu-eng.html
+++ b/public/gcintranet/ajax/sitemenu-eng.html
@@ -39,16 +39,18 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <li><a href="#mnuCareer" class="item">Career development and learning</a>
         <ul class="sm list-unstyled" id="mnuCareer" role="menu">
           <li><a href="https://intranet.canada.ca/cdl-dca/fj-te/index-eng.asp" class="menuCDLOnclick-eng">Find a job</a></li>
-          <li><a href="https://learn-apprendre.csps-efpc.gc.ca/application/en" class="menuCDLOnclick-eng">GCcampus</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/catalogue/topics-eng.aspx" class="menuCDLOnclick-eng">Learning catalogue</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/catalogue/paths-eng.aspx" class="menuCDLOnclick-eng">Learning paths</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-eng.asp" class="menuCDLOnclick-eng">Second language training and evaluation</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/events/index-eng.aspx" class="menuCDLOnclick-eng">Events</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/catalogue/programs-series-eng.aspx" class="menuCDLOnclick-eng">Programs and series</a></li>
+          <li><a href="https://catalogue.csps-efpc.gc.ca/catalog?cm_locale=en&reveal_topic=0&reveal_subtopic=0&reveal_type=1&type%5B%5D=79&reveal_duration=0&reveal_delivery_method=0&query=&products_per_page=12&products_sort_order=product_name_asc&pagename=Catalog" class="menuCDLOnclick-eng">Job aids</a></li>
           <li><a href="https://www.csps-efpc.gc.ca/pso-eng.aspx" class="menuCDLOnclick-eng">Public service orientation</a></li>
-          <li><a href="https://www.csps-efpc.gc.ca/events/index-eng.aspx" class="menuCDLOnclick-eng">Learning events</a></li>
           <li><a href="https://intranet.canada.ca/cdl-dca/pd-pp/index-eng.asp" class="menuCDLOnclick-eng">Professional development</a></li>
           <li><a href="https://intranet.canada.ca/cdl-dca/psc-cfp/index-eng.asp" class="menuCDLOnclick-eng">Communities</a></li>
-          <li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-eng.asp" class="menuCDLOnclick-eng">Second language training and evaluation</a></li>
+          <li><a href="https://wiki.gccollab.ca/M365" class="menuCDLOnclick-eng">Microsoft (M365) training resources</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/cpie-ccea/index-eng.asp" class="menuCDLOnclick-eng">Career Pathways Initiative for Indigenous employees</a></li>
           <li><a href="https://www.forces.gc.ca/en/education-training.page" class="menuCDLOnclick-eng">Military education and training</a></li>
-          <li><a href="https://intranet.canada.ca/cdl-dca/cpie-ccea/index-eng.asp" class="menuCDLOnclick-eng">Career Pathways Initiative for Indigenous Employees</a></li>
-          <li><a href="https://www.csps-efpc.gc.ca/tools/jobaids/virtual-team-toolkit-eng.aspx" class="menuCDLOnclick-eng">Virtual team toolkit</a></li>
-          <li><a href="https://wiki.gccollab.ca/M365/Home" class="menuCDLOnclick-eng">Microsoft (M365) training resources</a></li>
           <li class="slflnk"><a href="https://intranet.canada.ca/cdl-dca/index-eng.asp" class="menuCDLOnclick-eng">Career development and learning – More</a></li>
         </ul>
       </li>
