--- a/public/gcintranet/ajax/sitemenu-fra.html
+++ b/public/gcintranet/ajax/sitemenu-fra.html
@@ -39,16 +39,18 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <li><a href="#mnuCarriere" class="item">Développement de carrière et apprentissage</a>
         <ul class="sm list-unstyled" id="mnuCarriere" role="menu">
           <li><a href="https://intranet.canada.ca/cdl-dca/fj-te/index-fra.asp" class="menuCDLOnclick-fra">Trouver un emploi</a></li>
-  <li><a href="https://learn-apprendre.csps-efpc.gc.ca/application/fr" class="menuCDLOnclick-fra">GCcampus</a></li>
-  <li><a href="https://www.csps-efpc.gc.ca/pso-fra.aspx" class="menuCDLOnclick-fra">Orientation à la fonction publique</a></li>
-  <li><a href="https://www.csps-efpc.gc.ca/index-fra.aspx" class="menuCDLOnclick-fra">Événements d&rsquo;apprentissage</a></li>
-  <li><a href="https://intranet.canada.ca/cdl-dca/pd-pp/index-fra.asp" class="menuCDLOnclick-fra">Perfectionnement professionnel</a></li>
-  <li><a href="https://intranet.canada.ca/cdl-dca/psc-cfp/index-fra.asp" class="menuCDLOnclick-fra">Collectivités</a></li>
-  <li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-fra.asp" class="menuCDLOnclick-fra">Formation et évaluation de langue seconde</a></li>
-  <li><a href="https://www.forces.gc.ca/fr/education-formation.page" class="menuCDLOnclick-fra">Éducation et formation des militaires</a></li>
-  <li><a href="https://intranet.canada.ca/cdl-dca/cpie-ccea/index-fra.asp" class="menuCDLOnclick-fra">Cheminements de carrière pour les employés autochtones</a></li>
-  <li><a href="https://www.csps-efpc.gc.ca/tools/jobaids/virtual-team-toolkit-fra.aspx" class="menuCDLOnclick-fra">Trousse d'outils pour les équipes virtuelles</a></li>
-  <li><a href="https://wiki.gccollab.ca/M365/Accueil" class="menuCDLOnclick-fra">Ressources de formation pour Microsoft (M365)</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/catalogue/topics-fra.aspx" class="menuCDLOnclick-fra">Catalogue d&#8217;apprentissage</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/catalogue/paths-fra.aspx" class="menuCDLOnclick-fra">Parcours d&#8217;apprentissage</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-fra.asp" class="menuCDLOnclick-fra">Formation et évaluation de langue seconde</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/events/index-fra.aspx" class="menuCDLOnclick-fra">Événements</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/catalogue/programs-series-fra.aspx" class="menuCDLOnclick-fra">Programmes et séries</a></li>
+          <li><a href="https://catalogue.csps-efpc.gc.ca/catalog?cm_locale=fr&reveal_topic=0&reveal_subtopic=0&reveal_type=1&type%5B%5D=79&reveal_duration=0&reveal_delivery_method=0&query=&products_per_page=12&products_sort_order=product_name_asc&pagename=Catalog" class="menuCDLOnclick-fra">Outils de travail</a></li>
+          <li><a href="https://www.csps-efpc.gc.ca/pso-fra.aspx" class="menuCDLOnclick-fra">Orientation à la fonction publique</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/pd-pp/index-fra.asp" class="menuCDLOnclick-fra">Perfectionnement professionnel</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/psc-cfp/index-fra.asp" class="menuCDLOnclick-fra">Collectivités</a></li>
+          <li><a href="https://wiki.gccollab.ca/M365" class="menuCDLOnclick-fra">Ressources de formation pour Microsoft (M365)</a></li>
+          <li><a href="https://intranet.canada.ca/cdl-dca/cpie-ccea/index-fra.asp" class="menuCDLOnclick-fra">Parcours de carrière pour les employés autochtones</a></li>
+          <li><a href="https://www.forces.gc.ca/fr/education-formation.page" class="menuCDLOnclick-fra">Éducation et formation des militaires</a></li>
           <li class="slflnk"><a href="https://intranet.canada.ca/cdl-dca/index-fra.asp" class="menuCDLOnclick-fra">Développement de carrière et apprentissage - Autre</a></li>
         </ul>
       </li>
