--- a/public/global/esdcmenu-eng.html
+++ b/public/global/esdcmenu-eng.html
@@ -58,7 +58,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 				<!--<li role="presentation"><a href="https://esdc.prv/en/service-canada/tismb/index.shtml">Transformation and Integrated Service Management</a></li>-->
                 <!--li role="presentation"><a href="https://esdc.prv/en/service-canada/tmb/index.shtml">Transformation Management Branch</a></li-->
                 <!--<li role="presentation"><a href="http://dialogue/grp/smb-dggs/sitepages/home.aspx">Service Management</a></li>-->
-                <!--<li role="presentation"><a href="https://esdc.prv/en/service-canada/tfwpd/index.shtml">Temporary Foreign Worker Program Branch</a></li>-->
+                <li role="presentation"><a href="https://esdc.prv/en/service-canada/tfwpb/index.shtml">Temporary Foreign Worker Program Branch</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/atlantic/index.shtml">Atlantic</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/quebec/index.shtml">Quebec</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/ontario/index.shtml">Ontario</a></li>
@@ -88,7 +88,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <ul role="menu">
                 <li role="presentation"><a href="https://esdc.prv/en/work_tools/acronyms.shtml">Acronyms</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/labour/tools/atip.shtml">ATIP</a></li>
-                <li role="presentation"><a href="https://iservice.prv/eng/is/ve/disclosure/index.shtml">Disclosure of Wrongdoing</a></li>
+                <li role="presentation"><a href="https://iservice.prv/eng/disclosure-wrongdoing/index.shtml">Disclosure of Wrongdoing</a></li>
                 <li role="presentation"><a href="https://search.ebscohost.com/Community.aspx?custid=hrdcl&amp;groupid=main&amp;authtype=ip&amp;stsug=AjwyRg8WGx2ikCXPV6Uh4HojncCJOM3yTVAkK3eRm1RwUeAuKTJTPbh5Cl2RkHWq9g8UngcFMhh7LHWtDSKd96bFaVC7zNaLJYEXZsn7p2j_hNicPchsw5P_zHIOaOsXGe09-QlKEilFmaIVTMntJLeElb29Iz-7H4ZhTpffA0c&amp;IsAdminMobile=N&amp;encid=22D731263C5635273736354632453C27373379C373C372C373C378C371C376C33013">EBSCO Online databases - Literature searches </a></li>
                 <li role="presentation"><a href="https://iservice.prv/eng/hr/eap/index.shtml">Employee Assistance</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/isb/fraud_framework/index.shtml">ESDC Fraud Framework </a></li>
@@ -113,7 +113,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <ul role="menu">
               <li role="presentation"><a href="https://iservice.prv/eng/finance/DELEG/deleg-toc.shtml">Authorities Delegated by the Canada Employment Insurance Commission</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/cpp-oas/index.shtml">Canada Pension Plan / Old Age Security</a></li>
-                <li role="presentation"><a href="http://crt-orc.prv/wppa.aspx">Common Reference Tool</a></li>
+                <li role="presentation"><a href="https://crt-orc.esdc-edsc.canada.ca/en/crt/home.shtml">Common Reference Tool</a></li>
                 <li role="presentation"><a href="https://csgc-scsc.service.gc.ca/p/p0100/p0000.aspx?lang=eng">Common System for Grants and Contributions</a></li>
                 <li role="presentation"><a href="https://dialogue.spprod.service.gc.ca/grp/ops-prl-brt/SitePages/default.aspx">CPP and OAS Electronic Reference Library</a></li>
                 <li role="presentation"><a href="https://ort-orl.esdc-edsc.canada.ca/en/site/home/home.shtml">EI Online Reference Tool</a></li>
