--- a/public/global/esdcmenu1-fra.html
+++ b/public/global/esdcmenu1-fra.html
@@ -57,7 +57,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <li role="presentation"><a href="https://edsc.prv/fr/service-canada/dgsc/index.shtml">Service aux citoyens</a></li>
                 <li role="presentation"><a href="https://esdc.prv/fr/service-canada/dgsi/index.shtml">Services d'intégrité</a></li>
                 <!--<li role="presentation"><a href="https://esdc.prv/fr/service-canada/dgtgis/index.shtml">Transformation et gestion intégrée des services</a></li>-->
-                <!--<li role="presentation"><a href="https://edsc.prv/fr/service-canada/dgptet/index.shtml">Direction générale du programme des travailleurs étrangers temporaires</a></li>-->
+                <li role="presentation"><a href="https://edsc.prv/fr/service-canada/dgptet/index.shtml">Direction générale du Programme des travailleurs étrangers temporaires</a></li>
                 <li role="presentation"><a href="https://edsc.prv/fr/service-canada/atlantique/index.shtml">Atlantique</a></li>
                 <li role="presentation"><a href="https://esdc.prv/fr/service-canada/quebec/index.shtml">Québec</a></li>
                 <li role="presentation"><a href="https://esdc.prv/fr/service-canada/ontario/index.shtml">Ontario</a></li>
@@ -90,7 +90,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <li role="presentation"><a href="https://esdc.prv/fr/travail/outils/aiprp.shtml">AIPRP</a></li>
                 <li role="presentation"><a href="https://search.ebscohost.com/Community.aspx?custid=hrdcl&amp;groupid=main&amp;authtype=ip&amp;stsug=AjwyRg8WGx2ikCXPV6Uh4HojncCJOM3yTVAkK3eRm1RwUeAuKTJTPbh5Cl2RkHWq9g8UngcFMhh7LHWtDSKd96bFaVC7zNaLJYEXZsn7p2j_hNicPchsw5P_zHIOaOsXGe09-QlKEilFmaIVTMntJLeElb29Iz-7H4ZhTpffA0c&amp;IsAdminMobile=N&amp;encid=22D731263C5635273736354632453C27373379C373C372C373C378C371C376C33013">Bases de données EBSCO - Recherches documentaires</a></li>
                 <li role="presentation"><a href="https://esdc.prv/fr/service-canada/dgsi/cadre_fraude/index.shtml">Cadre de référence de la fraude d’EDSC</a></li>
-                <li role="presentation"><a href="https://iservice.prv/fra/si/ve/divulgation/index.shtml">Divulgation d’acte répréhensible</a></li>
+                <li role="presentation"><a href="https://iservice.prv/fra/divulgation-actes-reprehensibles/index.shtml">Divulgation d’acte répréhensible</a></li>
                 <li role="presentation"><a href="https://iservice.prv/fra/gerance_information/index.shtml">Gérance de l'information</a></li>
                 <li role="presentation"><a href="https://iservice.prv/fra/rh/era/index.shtml">Gestion du rendement</a></li>
                 <!-- li><a href="https://can01.safelinks.protection.outlook.com/?url=http%3A%2F%2Fwww12.edsc.gc.ca%2Fsgpe-pmps%2Fh.4m.2%40-fra.jsp&data=05%7C01%7CNC-CS-SC-PFOLIO-WEB-WEB-MINIST-INTRANET-GD%40hrsdc-rhdcc.gc.ca%7C472836bf18564c61643608dad239dc87%7C9ed558468a814246acd8b1a01abfc0d1%7C0%7C0%7C638053443203527066%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=8xCdUE2RszStejlynru18eGL0SxK5fafBlrAB5p69uc%3D&reserved=0">Publications (Publicentre)</a></li -->
@@ -117,7 +117,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <li role="presentation"><a href="https://edsc.prv/fr/service-canada/prestation-services/index.shtml">Communauté de prestation de service</a></li>
                 <li role="presentation"><a href="https://impact.prv/default.aspx?L=F">IMPACT</a></li>
 				<li role="presentation"><a href="https://kmt-ogc.service.gc.ca/fr/">Outil de gestion du savoir pour les pensions <!--(RPC)--></a></li>
-                <li role="presentation"><a href="http://crt-orc.prv/wppa.aspx">Outil de référence commun</a></li>
+                <li role="presentation"><a href="https://crt-orc.esdc-edsc.canada.ca/en/crt/home.shtml">Outil de référence commun</a></li>
                 <li role="presentation"><a href="https://ort-orl.esdc-edsc.canada.ca/fr/site/home/home.shtml">Outil de référence en ligne de l'AE</a></li>
                 <li role="presentation"><a href="https://dialogue.spprod.service.gc.ca/grp/BU6975203">Outil de suivi du courrier Protégé B</a></li>
                 <li role="presentation"><a href="https://esdc.prv/fr/service-canada/rpc-sv/index.shtml">Régime de pensions du Canada / Sécurité de la vieillesse</a></li>
