Subtheme template changes

--- a/public/global/esdcfooter-eng.html
+++ b/public/global/esdcfooter-eng.html
@@ -5,7 +5,7 @@
     <h3>About us</h3>
     <ul class="list-unstyled">
       <li><a href="https://edsc.prv/en/news/dm/index.shtml">DM messages</a></li>
-      <li><a href="https://edsc.prv/en/help.shtml">Help and important notices</a></li>
+      <li><a href="https://edsc.prv/en/terms_conditions.shtml">Terms and Conditions</a></li>
       <li><a href="https://edsc.prv/en/intersection/index.shtml">Intersection</a></li>
       <li><a href="https://edsc.prv/en/news/index.shtml">News</a></li>
     </ul>
