chore: Cleanup duplicate closing HTML

--- a/public/gcweb/samples/footer-en.html
+++ b/public/gcweb/samples/footer-en.html
@@ -94,7 +94,7 @@ defFooter.outerHTML = wet.builder.footer({
 });
             </pre>
             <h2>Main Footer</h2>
-			<p>The main footer is visible by default. You have the ability to hide the main footer via the <code class="wb-prettify">hideFooterMain</code> parameter.</p></p>
+			<p>The main footer is visible by default. You have the ability to hide the main footer via the <code class="wb-prettify">hideFooterMain</code> parameter.</p>
             <p>This is configured in the <code>footer</code> section of your page.</p>
             <pre>
 defFooter.outerHTML = wet.builder.footer({
