--- a/public/gcweb/samples/footer-fr.html
+++ b/public/gcweb/samples/footer-fr.html
@@ -93,8 +93,8 @@ defFooter.outerHTML = wet.builder.footer({
 });
             </pre>
             <h2>La bande principale</h2>
-            <p>La bande principale est visible par défaut. Vous avez la possibilité de masquer la bande principale via le paramètre <code class="wb-prettify">hideFooterMain</code>.</p></p>
-            <p>Ceci est configuré dans la section <code>footer</code> de votre page.</p>>
+            <p>La bande principale est visible par défaut. Vous avez la possibilité de masquer la bande principale via le paramètre <code class="wb-prettify">hideFooterMain</code>.</p>
+            <p>Ceci est configuré dans la section <code>footer</code> de votre page.</p>
             <pre>
 defFooter.outerHTML = wet.builder.footer({
 ...
