CDTS release updates

--- a/public/gcintranet/ajax/sitemenu-eng.html
+++ b/public/gcintranet/ajax/sitemenu-eng.html
@@ -16,7 +16,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <ul class="sm list-unstyled" id="mnuNews" role="menu">
           <li><a href="https://intranet.canada.ca/psc-fsc/messages/index-eng.asp" class="menuNOnclick-eng">Messages for employees</a></li>
           <li><a href="https://intranet.canada.ca/psc-fsc/gwi-ipg/index-eng.asp" class="menuNOnclick-eng">Government-wide initiatives</a></li>
-          <li><a href="https://intranet.canada.ca/psc-fsc/aw-pr/index-eng.asp" class="menuNOnclick-eng">Awards and recognition</a></li>
+          <li><a href="https://www.canada.ca/en/treasury-board-secretariat/services/innovation/awards-recognition-special-events.html" class="menuNOnclick-eng">Awards and recognition</a></li>
           <li><a href="https://intranet.canada.ca/psc-fsc/nb-cb-eng.asp" class="menuNOnclick-eng">Newsletters and bulletins</a></li>
 <!--          <li><a href="https://www.canada.ca/en/treasury-board-secretariat/site/proudly-serving.html" class="menuNOnclick-eng">Proudly serving Canadians</a></li>
           <li><a href="https://intranet.canada.ca/psc-fsc/hps-vfp/index-eng.asp" class="menuNOnclick-eng">Humans of the Public Service</a></li>-->
