--- a/public/global/esdcfooter-eng.html
+++ b/public/global/esdcfooter-eng.html
@@ -5,9 +5,9 @@
     <h3>About us</h3>
     <ul class="list-unstyled">
       <li><a href="https://edsc.prv/en/news/dm/index.shtml">DM messages</a></li>
-      <li><a href="https://edsc.prv/en/terms_conditions.shtml">Terms and Conditions</a></li>
       <li><a href="https://edsc.prv/en/intersection/index.shtml">Intersection</a></li>
       <li><a href="https://edsc.prv/en/news/index.shtml">News</a></li>
+      <li><a href="https://edsc.prv/en/terms-conditions.shtml">Terms and conditions</a></li>
     </ul>
   </section>
   <section class="col-sm-3">
