--- a/public/global/esdcfooter-fra.html
+++ b/public/global/esdcfooter-fra.html
@@ -4,10 +4,10 @@
   <section class="col-sm-3">
     <h3>À propos</h3>
     <ul class="list-unstyled">
-      <li><a href="https://edsc.prv/fr/avis.shtml">Avis</a></li>
       <li><a href="https://edsc.prv/fr/intersection/index.shtml">Intersection</a></li>
       <li><a href="https://edsc.prv/fr/nouvelles/sm/index.shtml">Messages des SM</a></li>
       <li><a href="https://edsc.prv/fr/nouvelles/index.shtml">Nouvelles</a></li>
+      <li><a href="https://edsc.prv/fr/conditions-utilisation.shtml">Conditions d’utilisation</a></li>
     </ul>
   </section>
      <section class="col-sm-3">
