--- a/public/gcintranet/ajax/sitemenu-fra.html
+++ b/public/gcintranet/ajax/sitemenu-fra.html
@@ -16,7 +16,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <ul class="sm list-unstyled" id="mnuNouvelles" role="menu">
           <li><a href="https://intranet.canada.ca/psc-fsc/messages/index-fra.asp" class="menuNOnclick-eng">Messages aux employés</a></li>
           <li><a href="https://intranet.canada.ca/psc-fsc/gwi-ipg/index-fra.asp" class="menuNOnclick-eng">Initiatives pangouvernementales</a></li>
-          <li><a href="https://intranet.canada.ca/psc-fsc/aw-pr/index-fra.asp" class="menuNOnclick-eng">Prix et reconnaissance des employés</a></li>
+          <li><a href="https://www.canada.ca/fr/secretariat-conseil-tresor/services/innovation/prix-reconnaissance-evenements-speciaux.html" class="menuNOnclick-eng">Prix et reconnaissance des employés</a></li>
           <li><a href="https://intranet.canada.ca/psc-fsc/nb-cb-fra.asp" class="menuNOnclick-eng">Communiqués et bulletins d&#8217;information</a></li>
        <!--   <li><a href="https://www.canada.ca/fr/secretariat-conseil-tresor/site/fiers-servir.html" class="menuNOnclick-eng">Fiers de servir les Canadiennes et les Canadiens</a></li>
           <li><a href="https://intranet.canada.ca/psc-fsc/hps-vfp/index-fra.asp" class="menuNOnclick-eng">Les visages de la fonction publique</a></li>-->
