Fixing broken link

--- a/public/gcweb/ajax/sitemenu-fr.html
+++ b/public/gcweb/ajax/sitemenu-fr.html
@@ -93,7 +93,7 @@
 						<li><a href="https://www.canada.ca/fr/services/sante/securite-produits.html">Sécurité des produits</a></li>
 						<li><a href="https://www.canada.ca/fr/services/sante/maladies-et-affections.html">Maladies et affections</a></li>
 						<li><a href="https://www.canada.ca/fr/services/sante/vie-saine.html">Vie saine</a></li>
-						<li><a href="https://www.canada.ca/fr/services/sante/sante-autochtones.html">Santé des autochtones</a></li>
+						<li><a href="https://www.sac-isc.gc.ca/fra/1569861171996/1569861324236">Santé des autochtones</a></li>
 						<li><a href="https://www.canada.ca/fr/services/sante/systeme-et-services-sante.html">Système et services de santé</a></li>
 						<li><a href="https://www.canada.ca/fr/services/sante/science-recherche-et-donnees.html">Science, recherche et données</a></li>
 						<li class="slflnk"><a href="https://www.canada.ca/fr/services/sante.html">Santé – Autres</a></li>
