Add contributors pattern

--- a/public/gcweb/samples/index-fr.html
+++ b/public/gcweb/samples/index-fr.html
@@ -73,7 +73,7 @@
                 <li><a href="content-fr.html">Contenu (guide de style)</a></li>
                 <li><a href="footer-fr.html">Pied de page</a></li>
 				<li><a href="exitscript-fr.html">Quitter un site sécurisé</a></li>
-                <li><a href="feedback-and-share-fr.html">Commentaires et partage</a></li>
+                <li><a href="page-details-fr.html">Détails de la page</a></li>
                 <li><a href="jquery-fr.html">Chargement de jQuery</a></li>
 				<li><a href="languagelinks-fr.html">Liens linguistiques</a></li>
 				<li><a href="sectionmenu-fr.html">Menu de section</a></li>
