--- a/public/gcweb/samples/index.html
+++ b/public/gcweb/samples/index.html
@@ -73,7 +73,7 @@
                 <li><a href="content-en.html">Content (style guide)</a></li>
                 <li><a href="footer-en.html">Footer</a></li>
 				<li><a href="exitscript-en.html">Leaving a Secure Site</a></li>
-                <li><a href="feedback-and-share-en.html">Feedback and Share</a></li>
+                <li><a href="page-details-en.html">Page Details</a></li>
                 <li><a href="jquery-en.html">Loading jQuery</a></li>
 				<li><a href="languagelinks-en.html">Language Links</a></li>
 				<li><a href="sectionmenu-en.html">Section Menu</a></li>
