--- a/public/gcweb/samples/page-details-fr.html
+++ b/public/gcweb/samples/page-details-fr.html
@@ -129,7 +129,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
             </pre>
             <h2>Collaborateurs</h2>
             <p>Utilisez la configuration collaborateurs pour mettre en évidence les institutions ou organismes ayant contribué au contenu d’une page Web.</p>
-            <h3>Implementation</h3>
+            <h3>Mise en oeuvre</h3>
             <p>Les contributeurs sont ajoutés dans la section <code>preFooter</code> de votre page.</p>
             <ul>
                 <li><code class="wb-prettify">"text"</code>:  le texte du lien qui s'affiche</li>
