Fixing preFooter tests

--- a/public/gcweb/samples/page-details-fr.html
+++ b/public/gcweb/samples/page-details-fr.html
@@ -108,7 +108,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
     });
             </pre>
             <h2>Partager</h2>
-            <p>b>Note: </b>Le bouton « Partager cette page » est en cours de désactivation et il n'est pas recommandé d'ajouter ce composant à votre page.</p>
+            <p>b>Note: </b>Le bouton « Partager cette page » va être mis hors service et il n'est pas recommandé d'ajouter ce composant à votre page.</p>
             <p>Le bouton « Partager cette page » est un moyen pour les utilisateurs de partager l'URL du site via les médias sociaux. Vous pouvez personnaliser cette sélection ou simplement montrer le bouton.</p>
             <h3>Mise en oeuvre</h3>
             <p>Ce bouton peut être personnalisé dans la section <code>preFooter</code> de votre page.</p>
