--- a/public/gcweb/samples/page-details-fr.html
+++ b/public/gcweb/samples/page-details-fr.html
@@ -108,14 +108,15 @@ defPreFooter.outerHTML = wet.builder.preFooter({
     });
             </pre>
             <h2>Partager</h2>
-            <p>Le bouton « Partager cette page » est un moyen pour les utilisateurs de partager l'URL du site via les médias sociaux. Par défaut, ce bouton s'affiche avec la sélection par défaut des sites de réseaux sociaux. Vous pouvez personnaliser cette sélection ou simplement masquer le bouton.</p>
+            <p>b>Note: </b>Le bouton « Partager cette page » va être mis hors service et il n'est pas recommandé d'ajouter ce composant à votre page.</p>
+            <p>Le bouton « Partager cette page » est un moyen pour les utilisateurs de partager l'URL du site via les médias sociaux. Vous pouvez personnaliser cette sélection ou simplement montrer le bouton.</p>
             <h3>Mise en oeuvre</h3>
             <p>Ce bouton peut être personnalisé dans la section <code>preFooter</code> de votre page.</p>
-            <p>Cacher le bouton</p>
+            <p>Montrer le bouton</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
-    "showShare": false
+    "showShare": true
 ...
 });
             </pre>
@@ -162,7 +163,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
                     "contributors": [{
                         "text": "[Ministère ou agence]",
                         "href": "#",
-                    }],
+                    }]
                 });
             </script>
         </main>
