Adding language precedence to splash page

--- a/public/gcweb/samples/splashpage.html
+++ b/public/gcweb/samples/splashpage.html
@@ -55,6 +55,7 @@
 				var contentSplash = document.getElementById("splashContent");
 				contentSplash.innerHTML = wet.builder.splash({
 					"cdnEnv": "esdcprod",
+					//"languagePrecedence":"French",
 					"indexEng": "https://www.canada.ca/en/index.html",
 					"indexFra": "https://www.canada.ca/fr/index.html",
 					"termsEng": "https://www.canada.ca/en/transparency/terms.html",
