--- a/public/gcintranet/samples/splashpage.html
+++ b/public/gcintranet/samples/splashpage.html
@@ -54,6 +54,7 @@
 				var contentSplash = document.getElementById("splashContent");
 				contentSplash.innerHTML = wet.builder.splash({
                     "cdnEnv": "prod",
+					//"languagePrecedence":"French",
 					"indexEng": "https://intranet.canada.ca/index-eng.asp",
 					"indexFra": "https://intranet.canada.ca/index-fra.asp",
 					"termsEng": "https://intranet.canada.ca/terms-avis-eng.asp",
