Fixing CSS issues

--- a/public/gcintranet/samples/subtheme-esdc-en.html
+++ b/public/gcintranet/samples/subtheme-esdc-en.html
@@ -135,6 +135,7 @@ defTop.outerHTML = wet.builder.top({
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
+				"footerPath": "https://esdc.prv/_conf/assets/en/footer/esdcfooter-eng.html",
 				"cdnEnv": "prod"
 			});
 		</script>
