still wip, confirm the changes don't break cdts templates

--- a/public/global/esdcfooter-eng.html
+++ b/public/global/esdcfooter-eng.html
@@ -1,34 +1,34 @@
-<!-- The contents of this file were retrieved from https://esdc.prv/_conf/assets/en/footer/esdcfooter-eng.html -->
+<!-- The contents of this file were retrieved from https://intranet.esdc-edsc.canada.ca/_conf/assets/en/footer/esdcfooter-eng.html -->
 <h2 class="wb-inv">About this site</h2>
 <div class="row">
   <section class="col-sm-3">
     <h3>About us</h3>
     <ul class="list-unstyled">
-      <li><a href="https://edsc.prv/en/news/dm/index.shtml">DM messages</a></li>
-      <li><a href="https://edsc.prv/en/intersection/index.shtml">Intersection</a></li>
-      <li><a href="https://edsc.prv/en/news/index.shtml">News</a></li>
-      <li><a href="https://edsc.prv/en/terms-conditions.shtml">Terms and conditions</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/en/news/dm/index.shtml">DM messages</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/en/intersection/index.shtml">Intersection</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/en/news/index.shtml">News</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/en/terms-conditions.shtml">Terms and conditions</a></li>
     </ul>
   </section>
   <section class="col-sm-3">
     <h3>Contact us</h3>
     <ul class="list-unstyled">
       <li><a href="https://gcdirectory-gcannuaire.ssc-spc.gc.ca/en/GCD/?pgid=009">GoC employees</a></li>
-      <li><a href="https://edsc.prv/en/contact/publishing-team.shtml">Intranet publishing teams</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/en/contact/publishing-team.shtml">Intranet publishing teams</a></li>
     </ul>
   </section>
   <section class="col-sm-3">
     <h3>Communities</h3>
     <ul class="list-unstyled">
       <li><a href="http://blogs-blogues.prv/SM-DM/?lang=en">Senior management blog</a></li>
-      <li><a href="https://edsc.prv/en/stay_connected/index.shtml">Stay connected</a></li>
-      <li><a href="https://edsc.prv/en/stay_connected/handbook.shtml">Web handbook</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/en/stay_connected/index.shtml">Stay connected</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/en/stay_connected/handbook.shtml">Web handbook</a></li>
     </ul>
   </section>
   <div class="col-sm-3 col-lg-3 brdr-lft">
     <section>
       <h3>Feedback</h3>
-      <p><a href="https://edsc.prv/en/feedback/index.shtml"><img src="https://templates.service.gc.ca/rn/cls/wet/gcintranet/assets/feedback.png" alt="Feedback about this Web site"></a></p>
+      <p><a href="https://intranet.esdc-edsc.canada.ca/en/feedback/index.shtml"><img src="https://templates.service.gc.ca/rn/cls/wet/gcintranet/assets/feedback.png" alt="Feedback about this Web site"></a></p>
     </section>
   </div>
 </div>
