--- a/public/global/esdcfooter-fra.html
+++ b/public/global/esdcfooter-fra.html
@@ -1,34 +1,34 @@
-<!-- The contents of this file were retrieved from https://esdc.prv/_conf/assets/fr/footer/esdcfooter-fra.html -->
+<!-- The contents of this file were retrieved from https://intranet.esdc-edsc.canada.ca/_conf/assets/fr/footer/esdcfooter-fra.html -->
 <h2 class="wb-inv">À propos de ce site</h2>
 <div class="row">
   <section class="col-sm-3">
     <h3>À propos</h3>
     <ul class="list-unstyled">
-      <li><a href="https://edsc.prv/fr/intersection/index.shtml">Intersection</a></li>
-      <li><a href="https://edsc.prv/fr/nouvelles/sm/index.shtml">Messages des SM</a></li>
-      <li><a href="https://edsc.prv/fr/nouvelles/index.shtml">Nouvelles</a></li>
-      <li><a href="https://edsc.prv/fr/conditions-utilisation.shtml">Conditions d’utilisation</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/fr/intersection/index.shtml">Intersection</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/fr/nouvelles/sm/index.shtml">Messages des SM</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/fr/nouvelles/index.shtml">Nouvelles</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/fr/conditions-utilisation.shtml">Conditions d’utilisation</a></li>
     </ul>
   </section>
      <section class="col-sm-3">
     <h3>Contact</h3>
     <ul class="list-unstyled">
       <li><a href="https://gcdirectory-gcannuaire.ssc-spc.gc.ca/fr/GCA/?pgid=009">Employés du gouvernement du Canada</a></li>
-      <li><a href="https://edsc.prv/fr/coordonnees/equipe-publication.shtml">Équipes d'éditions Intranet</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/fr/coordonnees/equipe-publication.shtml">Équipes d'éditions Intranet</a></li>
     </ul>
   </section>
   <section class="col-sm-3">
     <h3>Communautés</h3>
     <ul class="list-unstyled">
       <li><a href="http://blogs-blogues.prv/SM-DM/?lang=fr">Blogue des SM</a></li>
-      <li><a href="https://edsc.prv/fr/restez_branche/manuel.shtml">Guide sur l'utilisation du Web</a></li>
-      <li><a href="https://edsc.prv/fr/restez_branche/index.shtml">Restez branché</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/fr/restez_branche/manuel.shtml">Guide sur l'utilisation du Web</a></li>
+      <li><a href="https://intranet.esdc-edsc.canada.ca/fr/restez_branche/index.shtml">Restez branché</a></li>
     </ul>
   </section>
   <div class="col-sm-3 col-lg-3 brdr-lft">
     <section>
       <h3>Rétroaction</h3>
-      <p><a href="https://edsc.prv/fr/retroaction/index.shtml"><img src="https://templates.service.gc.ca/rn/cls/wet/gcintranet/assets/feedback.png" alt="Rétroaction sur ce site Web"></a></p>
+      <p><a href="https://intranet.esdc-edsc.canada.ca/fr/retroaction/index.shtml"><img src="https://templates.service.gc.ca/rn/cls/wet/gcintranet/assets/feedback.png" alt="Rétroaction sur ce site Web"></a></p>
     </section>
   </div>
 </div>
