Fixing failing links

--- a/public/gcweb/ajax/sitemenu-fr.html
+++ b/public/gcweb/ajax/sitemenu-fr.html
@@ -60,7 +60,7 @@
 						<li><a href="https://www.canada.ca/fr/services/entreprises/impots.html">Taxes et impôt des entreprises</a></li>
 						<li><a href="https://www.canada.ca/fr/services/entreprises/societes-de-regime-federal.html">Sociétés de régime fédéral</a></li>
 						<li><a href="https://www.canada.ca/fr/services/entreprises/engager.html">Engager et gérer des employés</a></li>
-						<li><a href="https://www.canada.ca/fr/services/entreprises/commerce.html">Commerce international et investissement</a></li>
+						<li><a href="https://international.canada.ca/fr/services/entreprises/commerce">Commerce international et investissement</a></li>
 						<li><a href="https://www.canada.ca/fr/services/entreprises/permis.html">Permis, licences et réglementation</a></li>
 						<li><a href="https://www.canada.ca/fr/services/entreprises/faire-affaire.html">Faire affaire avec le gouvernement</a></li>
 						<li><a href="https://www.canada.ca/fr/services/science/innovation.html">R-D et innovation</a></li>
