Fixing broken links

--- a/public/gcweb/ajax/sitemenu-en.html
+++ b/public/gcweb/ajax/sitemenu-en.html
@@ -57,7 +57,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 					<li><a href="https://www.canada.ca/en/services/business/taxes.html">Business taxes</a></li>
 					<li><a href="https://www.canada.ca/en/services/business/federal-corporations.html">Federal corporations</a></li>
 					<li><a href="https://www.canada.ca/en/services/business/hire.html">Hiring and managing employees</a></li>
-					<li><a href="https://www.international.canada.ca/en/services/business/trade">International trade and investment</a></li>
+					<li><a href="https://international.canada.ca/en/services/business/trade">International trade and investment</a></li>
 					<li><a href="https://www.canada.ca/en/services/business/permits.html">Permits, licences and regulations</a></li>
 					<li><a href="https://www.canada.ca/en/services/business/doing-business.html">Doing business with government</a></li>
 					<li><a href="https://www.canada.ca/en/services/science/innovation.html">R&amp;D and innovation</a></li>
