--- a/public/wet/gcintranet/wet-boew/ajax/sitemenu-en.html
+++ b/public/wet/gcintranet/wet-boew/ajax/sitemenu-en.html
@@ -55,7 +55,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="https://www.canada.ca/en/services/business/grants.html">Grants and financing</a></li>
 <li><a href="https://www.canada.ca/en/services/business/taxes.html">Business taxes</a></li>
 <li><a href="https://www.canada.ca/en/services/business/doing-business.html">Doing business with government</a></li>
-<li><a href="https://www.canada.ca/en/services/business/trade.html">International trade and investment</a></li>
+<li><a href="https://international.canada.ca/en/services/business/trade">International trade and investment</a></li>
 <li><a href="https://www.canada.ca/en/services/science/innovation.html">Research and development (R&amp;D) and innovation</a></li>
 <li><a href="https://www.canada.ca/en/services/business/ip.html">Intellectual property and copyright</a></li>
 <li><a href="https://www.canada.ca/en/services/business/permits.html">Permits, licences and regulations</a></li>
