--- a/public/wet/gcintranet/wet-boew/ajax/sitemenu-fr.html
+++ b/public/wet/gcintranet/wet-boew/ajax/sitemenu-fr.html
@@ -55,7 +55,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="https://www.canada.ca/fr/services/entreprises/subventions.html">Subventions et financement</a></li>
 <li><a href="https://www.canada.ca/fr/services/entreprises/impots.html">Taxes et impôt des entreprises</a></li>
 <li><a href="https://www.canada.ca/fr/services/entreprises/faire-affaire.html">Faire affaire avec le gouvernement</a></li>
-<li><a href="https://www.canada.ca/fr/services/entreprises/commerce.html">Commerce international et investissements</a></li>
+<li><a href="https://international.canada.ca/fr/services/entreprises/commerce">Commerce international et investissements</a></li>
 <li><a href="https://www.canada.ca/fr/services/science/innovation.html">Recherche-développement et innovation</a></li>
 <li><a href="https://www.canada.ca/fr/services/entreprises/pi.html">Propriété intellectuelle et droit d'auteur</a></li>
 <li><a href="https://www.canada.ca/fr/services/entreprises/permis.html">Permis, licences et règlements</a></li>
